# isola

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  README.zh-CN.md  demo_real_loop.py  pyproject.toml  requirements.txt
isola/: __init__.py  __main__.py  config.example.yaml  config.py  core.py  doctor.py  judge.py  mcp_server.py  mode_b.py  models.py  registry.py  store.py
isola/adapters/: cli.py  openclaw.py
isola/isola/: __main__.py  config.py  core.py  judge.py  store.py
isola/isola/adapters/: llm_harness.py
isola/tests/: fakes.py  test_distribution.py  test_integration.py  test_openclaw_adapter.py
memweave/: config.example.yaml  demo_real_loop.py  requirements.txt
memweave/memweave/: __main__.py  config.py  core.py  doctor.py  router.py  writeback.py
memweave/memweave/adapters/: cli.py  llm_harness.py  openclaw.py
memweave/tests/: fakes.py  test_distribution.py  test_integration.py  test_judge.py  test_openclaw_adapter.py  test_router.py  test_store.py
tests/: test_distribution.py  test_integration.py  test_judge.py  test_mcp_server.py  test_mode_b.py  test_router.py  test_store.py
